# airflow-memory-refresher

./: .env.example  .gitignore  .python-version  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: celery.py  constants.py  get_price_appl.py  get_price_fb.py  get_price_google.py  list_s3_objects.py  s3_copy_object_operator.py  s3_copy_object_with_transformation.py  s3_copy_to_local_and_to_s3.py  s3_multipall_copy_with_transformation_example.py  s3_multipall_copy_with_transformation_example_close_to_task.py  test_dag_s3_check_default_aws_connection.py  test_dag_s3_check_default_aws_connection_applied.py  user_processing.py  zip_producion_ready.py  zip_transform.py
include/inputs/: config_appl.yaml  config_fbl.yaml  config_googl.yaml
include/scripts/: dag_generator.py
include/templates/: dag_template.jinja2
